--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ custom.datasource.driver-class-name = org.postgresql.Driver
 custom.datasource.url= jdbc:postgresql://localhost:5432/oauth2
 custom.datasource.username= postgres
 custom.datasource.password=  root
+
+
+spring.batch.job.enabled=false
+spring.batch.initialize-schema=always
+spring.main.allow-bean-definition-overriding=true
