--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,12 @@ dependencies {
     implementation group: 'javax.xml', name: 'jaxb-impl', version: '2.1'
 
 
+    // map struck
+    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
+    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
