--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,17 @@ custom.datasource.username= postgres
 custom.datasource.password=  root
 
 
+##########################################
+# SQLite Configuration Details
+##########################################
+oauth2.sqlite.url=jdbc:sqlite::resource:sqlite/transaction.db
+oauth2.sqlite.driverClassName=org.sqlite.JDBC
+oauth2.sqlite.packagesToScan=com.example.demooauth2.provider.transaction.model
+oauth2.sqlite.flushMode=ALWAYS
+oauth2.sqlite.show_sql=true
+oauth2.sqlite.format_sql=true
+
+
 spring.batch.job.enabled=false
 spring.batch.initialize-schema=always
 spring.main.allow-bean-definition-overriding=true
