--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ oauth2.sqlite.format_sql=true
 spring.batch.job.enabled=false
 spring.batch.initialize-schema=always
 spring.main.allow-bean-definition-overriding=true
+
+server.error.include-message=always
